--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "react"
   ],
   "dependencies": {
-    "events": "^1.0.2",
     "intl-messageformat": "^1.0.4",
-    "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "object-assign": "^2.0.0",
-    "react-intl": "^1.1.0",
+    "pikaday": "^1.3.1",
+    "react": ">=0.12.2",
+    "react-pikaday": "^0.1.0",
+    "tcomb-form": "^0.4.1",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
