--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "object-assign": "^2.0.0",
     "pikaday": "^1.3.1",
     "react": ">=0.12.2",
+    "react-bootstrap": "^0.14.0",
     "react-pikaday": "^0.1.0",
+    "react-router": "^0.12.0",
+    "react-router-bootstrap": "^0.8.3",
     "tcomb-form": "^0.4.1",
     "underscore": "^1.7.0"
   },
