--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pikaday": "^1.3.1",
     "react": ">=0.12.2",
     "react-bootstrap": "^0.14.0",
+    "react-css-builder": "^0.2.0",
     "react-pikaday": "^0.1.0",
     "react-router": "^0.12.0",
     "react-router-bootstrap": "^0.8.3",
