--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "homepage": "https://github.com/hull-ships/hull-ship-boilerplate",
   "license": "MIT",
-  "main": "dist/assets/app.js",
+  "main": "dist/assets/ship.js",
   "author": {
     "name": "Hull",
     "email": "contact@hull.io",
@@ -34,7 +34,6 @@
     "pikaday": "^1.3.1",
     "react": ">=0.12.2",
     "react-bootstrap": "^0.14.0",
-    "react-css-builder": "^0.2.0",
     "react-imageloader": "^1.1.2",
     "react-loadermixin": "^1.0.4",
     "react-packery-mixin": "^0.1.4",
