--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "intl-messageformat": "^1.0.4",
     "moment": "^2.9.0",
+    "node-notifier": "^4.1.1",
     "object-assign": "^2.0.0",
     "pikaday": "^1.3.1",
     "react": ">=0.12.2",
