--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,11 @@
 {
   "name": "awards-academy",
   "description": "The original Cesar/Oscar prediction game, with live scores",
-  "index": "index.html",
+  "index": "ship.html",
   "version": "1.0.0",
   "demoKeys": {
+    "debug": true,
+    "jsUrl": "https://js.hull.dev/assets",
     "appId": "54e60986806eb9db67000287",
     "orgUrl": "https://hulldemos.hullbeta.io"
   },
