--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hull-ship-boilerplate",
-  "description": "A Hull Ship Boilerplate with React, Webpack, React-Hot-Loader, CSS Sandboxing",
+  "name": "hull-aa",
+  "description": "The Hull Awards Academy Prediction Game",
   "version": "0.0.1",
-  "homepage": "https://github.com/hull-ships/hull-ship-boilerplate",
+  "homepage": "https://github.com/hull-ships/hull-aa",
   "license": "MIT",
   "main": "dist/assets/ship.js",
   "author": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hull-ships/hull-ship-boilerplate"
+    "url": "git://github.com/hull-ships/hull-aa"
   },
   "bugs": {
     "url": "https://github.com/hull-ships/hull-ship/issues"
@@ -38,13 +38,13 @@
     "node-notifier": "^4.1.1",
     "object-assign": "^2.0.0",
     "pikaday": "^1.3.1",
-    "react": ">=0.12.2",
+    "react": "0.12.2",
     "react-bootstrap": "^0.14.0",
     "react-imageloader": "^1.1.2",
     "react-loadermixin": "^1.0.4",
     "react-packery-mixin": "^0.1.4",
     "react-pikaday": "^0.1.0",
-    "react-router": "^0.12.0",
+    "react-router": "0.12.0",
     "react-router-bootstrap": "^0.8.3",
     "react-social": "^0.1.4",
     "share-button": "git://github.com/carrot/share-button",
@@ -53,14 +53,17 @@
     "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
-    "6to5": "^2.11.4",
-    "6to5-loader": "^3.0.0",
     "autoprefixer-loader": "^1.1.0",
+    "gh-pages": "^0.2.0",
+    "babel": "^4.4.5",
+    "babel-core": "^4.4.5",
+    "babel-loader": "^4.0.0",
+    "css": "^2.1.0",
     "css-loader": "^0.9.0",
     "del": "^1.1.0",
     "extract-text-webpack-plugin": "^0.3.5",
     "file-loader": "^0.8.1",
-    "gulp": "^3.8.10",
+    "gulp": "^3.8.11",
     "gulp-gh-pages": "^0.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-sourcemaps": "^1.3.0",
@@ -71,16 +74,21 @@
     "json-loader": "^0.5.1",
     "jsx": "^0.9.89",
     "jsx-loader": "^0.12.2",
+    "less": "^2.4.0",
+    "less-loader": "^2.1.0",
+    "moment": "^2.9.0",
+    "ngrok": "^0.1.99",
     "node-notifier": "^4.1.0",
     "open": "0.0.5",
-    "react-hot-loader": "^1.0.0-alpha.3",
+    "react-hot-loader": "^1.2.3",
+    "react-social-icons": "^1.1.0",
     "react-tools": "^0.11.2",
     "run-sequence": "^1.0.2",
     "sass-loader": "^0.4.0-beta.1",
     "stats-webpack-plugin": "0.0.1",
     "style-loader": "unity/style-loader",
     "touch": "0.0.3",
-    "webpack": "^1.4.15",
-    "webpack-dev-server": "^1.6.6"
+    "webpack": "^1.7.1",
+    "webpack-dev-server": "^1.7.0"
   }
 }
